k8s/microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-k8s-app-microservice
  name: my-k8s-app-microservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-k8s-app-microservice
  template:
    metadata:
      labels:
        app: my-k8s-app-microservice
    spec:
      containers:
      - image: jamesplayer/my-k8s-microservice
        name: my-k8s-microservice
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-k8s-app-microservice
  name: my-k8s-app-microservice
spec:
  ports:
    - port: 50051
  selector:
    app: my-k8s-app-microservice
  type: ClusterIP
